CHANGES.txt - 07/16/2001
------------------------

CHANGES IN HTMLDOC v1.8.15

    NEW FEATURES

    CHANGES

	- Now load images into memory only as needed, and unload
	  them when no longer needed.  This provides a dramatic
	  reduction in memory usage with files that contain a
	  lot of in-line images.

    BUGS FIXES


CHANGES IN HTMLDOC v1.8.14

    NEW FEATURES

	- Added support for 128-bit encryption.
	- Added support for GET form request data in the PHP and
	  Java "portal" examples.

    CHANGES

	- Most output generation limits have been removed;
	  HTMLDOC now dynamically allocates memory as needed for
	  pages, images, headings, and links.  This has the
	  happy side-effect of reducing the initial memory
	  footprint significantly.
	- Now call setlocale() when it is available to localize
	  the date and time in the output.
	- The table parsing code now checks to see that a
	  ROWSPAN attribute fits in the table; e.g., a ROWSPAN
	  of 10 for a table that has only 6 rows remaining needs
	  to be reduced to 6...

    BUG FIXES

	- Tables with a lot of COLSPANs could cause a divide-
	  by-zero error or bad pages (NAN instead of a number.)
	- Table cells with a single render element would not be
	  vertically aligned.
	- The --quiet option would enable progress messages on
	  the command-line.
	- Table cell widths could be computed incorrectly,
	  causing unnecessary wrapping.
	- The --path option disabled checking for the file
	  with the original filename.


CHANGES IN HTMLDOC v1.8.13

    NEW FEATURES

	- Added support for secure (https) URLs via the OpenSSL
	  library.
	- Added support for Acrobat 5.0 (PDF 1.4).
	- Added support for transparency in PostScript and
	  PDF 1.1 and 1.2 output.
	- Added a --no-jpeg option (same as --jpeg=0)
	- Added support for the CSS2 page-break-before and
	  page-break-after properties.
	- Added a PHP example.

    CHANGES

	- External file references to non-PDF files now use the